--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   meta: any
 
   # Localization
-  intl: 0.18.0
+  intl: ^0.18.0
   flutter_localizations:
     sdk: flutter
 
@@ -35,7 +35,7 @@ dependencies:
   shared_preferences: 2.2.2
 
   # Logging
-  stack_trace: 1.11.0
+  stack_trace: ^1.11.0
   sentry_flutter: 7.11.0
   logging: 1.2.0
 
@@ -46,6 +46,7 @@ dependencies:
   path: 1.8.3
   path_provider: 2.1.0
   flutter_native_splash: 2.3.5
+  provider: ^6.1.2
 
   # Packages
   auto_route: ^7.6.0
