--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dev_dependencies:
   # Utils
   flutter_gen_runner: 5.3.2
   flutter_launcher_icons: 0.13.1
+  freezed: ^2.4.7
   melos: 3.2.0
   intl_utils: 2.8.5
 
