--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,20 @@ dependencies:
   # Flutter SDK
   flutter:
     sdk: flutter
+  path: ^1.9.0
+  analyzer: ^6.4.1
   collection: any
   async: any
-  meta: any
+  meta: ^1.11.0
+  flutter_svg: ^2.0.10+1
+  pinput: ^4.0.0
+  curl_logger_dio_interceptor: ^1.0.0
+  flutter_login: ^5.0.0
+  pretty_dio_logger: ^1.3.1
+  cached_network_image: ^3.3.1
 
   # Localization
-  intl: ^0.18.0
+  intl: ^0.19.0
   flutter_localizations:
     sdk: flutter
 
@@ -44,14 +52,17 @@ dependencies:
   pure: 0.2.0
   platform_info: 4.0.2
   bloc_concurrency: 0.2.2
-  path: 1.8.3
   path_provider: 2.1.0
   flutter_native_splash: 2.3.5
   provider: ^6.1.2
+  flutter_web_auth_2: ^3.1.1
+  lottie: ^3.1.0
+  hovering: ^1.0.4
 
   # Packages
   auto_route: ^7.6.0
   flutter_smart_dialog: ^4.9.5+1
+  web: ^0.5.0
 
 dev_dependencies:
   # Testing
@@ -60,15 +71,12 @@ dev_dependencies:
   build_runner: ^2.4.6
   auto_route_generator: ^7.2.0
 
-  # Lints
-  sizzle_lints: 2.0.2
-
   # Utils
   flutter_gen_runner: 5.3.2
   flutter_launcher_icons: 0.13.1
   freezed: ^2.4.7
   melos: 3.2.0
-  intl_utils: 2.8.5
+  intl_utils: ^2.8.7
 
 flutter:
   uses-material-design: true
