--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_login: ^5.0.0
   pretty_dio_logger: ^1.3.1
   cached_network_image: ^3.3.1
+  google_fonts: ^6.2.1
 
   # Localization
   intl: ^0.19.0
