--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,11 @@ version: 0.0.1+1
 
 environment:
   sdk: '>=3.5.0 <4.0.0'
+  flutter: ">=1.17.0"
+
+dependencies:
+  flutter:
+    sdk: flutter
 
 workspace:
   - core/meezy_core
